# henry-reinhardt-app

./: LICENSE  README.md  app.py  requirements.txt  vite.config.ts
core/: CMakeLists.txt  main.cpp
core/include/: helpers.h  hr.h  optimize.h  pchip.h  spline.h
core/source/: core.cpp
core/tests/: CMakeLists.txt  test_pchip.cpp
henry_reinhardt/: auth.py  core.py  data.py  layout.py
scripts/: cmake
src/: App.svelte
src/lib/: Chart.svelte  HR.svelte  StepFunctionTable.svelte
src/lib/components/ui/input/: input.svelte
